--- a/backend/.env.example
+++ b/backend/.env.example
@@ -56,3 +56,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SFTP_HOST=127.0.0.1
+SFTP_USERNAME=cigg
+SFTP_PASSWORD=toor
