--- a/backend/.env.example
+++ b/backend/.env.example
@@ -60,3 +60,12 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SFTP_HOST=127.0.0.1
 SFTP_USERNAME=cigg
 SFTP_PASSWORD=toor
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=carlosi.alertas@gmail.com
+MAIL_PASSWORD=srnruebchkbjcesx
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=carlosi.alertas@gmail.com
+MAIL_FROM_NAME="Playx MailBot"
