--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,7 +11,8 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "league/flysystem-sftp-v3": "^3.15"
+        "league/flysystem-sftp-v3": "^3.15",
+        "symfony/filesystem": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
