Modificado soporte verificación mail

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -71,3 +71,4 @@ MAIL_FROM_ADDRESS=carlosi.alertas@gmail.com
 MAIL_FROM_NAME="Playx MailBot"
 
 DEFAULT_PROFILE_PICTURE_PATH="../../assets/imgs/profile.jpg"
+FRONTEND_URL="http://localhost:4200"
