Añadido delete users, descartado modify

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -70,5 +70,5 @@ MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=carlosi.alertas@gmail.com
 MAIL_FROM_NAME="Playx MailBot"
 
-DEFAULT_PROFILE_PICTURE_PATH="../../assets/imgs/profile.jpg"
+DEFAULT_PROFILE_PICTURE_PATH="../../assets/imgs/profile.png"
 FRONTEND_URL="http://localhost:4200"
